// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VProgressCircular.ts should render component and match snapshot 1`] = `
<div class="v-progress-circular"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
     style="height: 32px; width: 32px;"
>
  <svg style="transform: rotate(0deg);"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715"
  >
    <circle class="v-progress-circular__underlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
    >
    </circle>
    <circle class="v-progress-circular__overlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
    >
    </circle>
  </svg>
  <div class="v-progress-circular__info">
    <span>
      content
    </span>
  </div>
</div>
`;

exports[`VProgressCircular.ts should render component with button prop and match snapshot 1`] = `
<div class="v-progress-circular v-progress-circular--visible v-progress-circular--button"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
     style="height: 40px; width: 40px;"
>
  <svg style="transform: rotate(0deg);"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715"
  >
    <circle class="v-progress-circular__underlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
    >
    </circle>
    <circle class="v-progress-circular__overlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
    >
    </circle>
  </svg>
  <div class="v-progress-circular__info">
  </div>
</div>
`;

exports[`VProgressCircular.ts should render component with color prop and match snapshot 1`] = `
<div class="v-progress-circular v-progress-circular--visible orange--text text--lighten-1"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
     style="height: 32px; width: 32px;"
>
  <svg style="transform: rotate(0deg);"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715"
  >
    <circle class="v-progress-circular__underlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
    >
    </circle>
    <circle class="v-progress-circular__overlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
    >
    </circle>
  </svg>
  <div class="v-progress-circular__info">
  </div>
</div>
`;

exports[`VProgressCircular.ts should render component with fill prop and match snapshot 1`] = `
<div class="v-progress-circular v-progress-circular--visible"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
     style="height: 32px; width: 32px;"
     fill="green lighten-1"
>
  <svg style="transform: rotate(0deg);"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715"
  >
    <circle class="v-progress-circular__underlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
    >
    </circle>
    <circle class="v-progress-circular__overlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
    >
    </circle>
  </svg>
  <div class="v-progress-circular__info">
  </div>
</div>
`;

exports[`VProgressCircular.ts should render component with indeterminate prop and match snapshot 1`] = `
<div class="v-progress-circular v-progress-circular--visible v-progress-circular--indeterminate"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     style="height: 32px; width: 32px;"
>
  <svg style="transform: rotate(0deg);"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715"
  >
    <circle class="v-progress-circular__overlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="125.66370614359172px"
    >
    </circle>
  </svg>
  <div class="v-progress-circular__info">
  </div>
</div>
`;

exports[`VProgressCircular.ts should render component with rotate prop and match snapshot 1`] = `
<div class="v-progress-circular v-progress-circular--visible"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
     style="height: 32px; width: 32px;"
>
  <svg style="transform: rotate(29deg);"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="22.857142857142858 22.857142857142858 45.714285714285715 45.714285714285715"
  >
    <circle class="v-progress-circular__underlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
    >
    </circle>
    <circle class="v-progress-circular__overlay"
            fill="transparent"
            cx="45.714285714285715"
            cy="45.714285714285715"
            r="20"
            stroke-width="5.714285714285714"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
    >
    </circle>
  </svg>
  <div class="v-progress-circular__info">
  </div>
</div>
`;

exports[`VProgressCircular.ts should render component with size prop and match snapshot 1`] = `
<div class="v-progress-circular v-progress-circular--visible"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
     style="height: 17px; width: 17px;"
>
  <svg style="transform: rotate(0deg);"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="26.153846153846157 26.153846153846157 52.307692307692314 52.307692307692314"
  >
    <circle class="v-progress-circular__underlay"
            fill="transparent"
            cx="52.307692307692314"
            cy="52.307692307692314"
            r="20"
            stroke-width="12.307692307692308"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
    >
    </circle>
    <circle class="v-progress-circular__overlay"
            fill="transparent"
            cx="52.307692307692314"
            cy="52.307692307692314"
            r="20"
            stroke-width="12.307692307692308"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
    >
    </circle>
  </svg>
  <div class="v-progress-circular__info">
  </div>
</div>
`;

exports[`VProgressCircular.ts should render component with width prop and match snapshot 1`] = `
<div class="v-progress-circular v-progress-circular--visible"
     role="progressbar"
     aria-valuemin="0"
     aria-valuemax="100"
     aria-valuenow="33"
     style="height: 32px; width: 32px;"
>
  <svg style="transform: rotate(0deg);"
       xmlns="http://www.w3.org/2000/svg"
       viewbox="33.68421052631579 33.68421052631579 67.36842105263158 67.36842105263158"
  >
    <circle class="v-progress-circular__underlay"
            fill="transparent"
            cx="67.36842105263158"
            cy="67.36842105263158"
            r="20"
            stroke-width="27.36842105263158"
            stroke-dasharray="125.664"
            stroke-dashoffset="0"
    >
    </circle>
    <circle class="v-progress-circular__overlay"
            fill="transparent"
            cx="67.36842105263158"
            cy="67.36842105263158"
            r="20"
            stroke-width="27.36842105263158"
            stroke-dasharray="125.664"
            stroke-dashoffset="84.19468311620646px"
    >
    </circle>
  </svg>
  <div class="v-progress-circular__info">
  </div>
</div>
`;
